just use mediamtx for streaming
